--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@egjs/vue-flicking": "^4.10.0",
+    "@nuxt/http": "^0.6.4",
     "core-js": "^3.19.3",
+    "font-awesome": "^4.7.0",
+    "fontawesome-free": "^1.0.4",
     "nuxt": "^2.15.8",
+    "swiper": "^8.4.4",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
