--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"ci": "^2.2.0"
+		"@swiper/core": "^0.0.21",
+		"@types/glider-js": "^1.7.8",
+		"ci": "^2.2.0",
+		"glider-js": "^1.7.8",
+		"swiper": "6.7.1"
 	}
 }
