--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -37,6 +37,7 @@
 		"@types/glider-js": "^1.7.8",
 		"ci": "^2.2.0",
 		"glider-js": "^1.7.8",
+		"svelte-scrollto": "^0.2.0",
 		"swiper": "6.7.1"
 	}
 }
